--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "sequelize": "^6.35.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sequelize-cli": "^6.6.2"
   }
 }
